<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/margin_horizontal"
    android:layout_marginVertical="@dimen/margin_vertical"
    tools:context="com.example.dnd.ui.main.MainFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dungeons_amp_dragons"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.title_main"
        app:layout_constraintBottom_toTopOf="@id/main_screen_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/main_screen_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/dragon_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintWidth_percent="0.5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_reminder_button"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="3dp"
        android:backgroundTint="@color/light_blue"
        android:padding="@dimen/padding_normal"
        android:text="@string/add_reminder"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_screen_image"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Small" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/classes_button"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginVertical="@dimen/margin_vertical"
        android:backgroundTint="@color/light_blue"
        android:padding="@dimen/padding_normal"
        android:text="@string/classes_button"
        android:textSize="@dimen/text_size_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_reminder_button"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Small" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/races_button"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="3dp"
        android:backgroundTint="@color/light_blue"
        android:padding="@dimen/padding_normal"
        android:text="@string/races_button"
        android:textSize="@dimen/text_size_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/classes_button"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Small" />

</androidx.constraintlayout.widget.ConstraintLayout>