<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="classes"
            type="com.example.dnd.ui.classes.ClassViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginVertical="@dimen/margin_vertical"
        app:layoutDescription="@xml/class_motion_scene"
        app:layout_scrollFlags="scroll|enterAlways|snap|exitUntilCollapsed">

        <ImageView
            android:id="@+id/classes_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/characters_image"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_vertical"
            android:paddingVertical="@dimen/padding_small"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:text="@string/classes"
            android:textAppearance="@style/TextAppearance.title_with_font" />

        <TextView
            android:id="@+id/is_no_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_vertical"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:text="@string/no_data"
            app:visibleOrGone="@{classes.isNoData}"
            android:textAppearance="@style/TextAppearance.body"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_list"
            android:layout_width="match_parent"
            android:layout_marginVertical="@dimen/margin_vertical"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:layout_height="0dp"
            tools:listitem="@layout/class_list_item" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>