<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="detailVar"
            type="com.example.dnd.database.RaceEntity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginVertical="@dimen/margin_vertical">

        <TextView
            android:id="@+id/race_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:layout_marginTop="@dimen/margin_vertical"
            android:text="@{detailVar.name}"
            app:layout_constraintBottom_toTopOf="@id/race_alignment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAppearance="@style/TextAppearance.title_with_font"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:layout_marginTop="@dimen/margin_vertical"
            android:text="@string/no_data"
            android:textAppearance="@style/TextAppearance.title_body"
            app:layout_constraintBottom_toTopOf="@id/race_alignment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/devider_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/padding_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/race_name"
            android:background="@color/light_blue"
            />

        <TextView
            android:id="@+id/race_alignment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:layout_marginTop="@dimen/margin_vertical"
            android:text="@{detailVar.alignment}"
            android:textAppearance="@style/TextAppearance.body"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/devider_line"
            tools:text="@string/alignment" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>